@startuml
' Generated from live MySQL schema on 2026-03-17
hide methods
hide stereotypes
top to bottom direction
scale max 980 width
skinparam linetype ortho
skinparam nodesep 18
skinparam ranksep 22
skinparam class {
  BackgroundColor white
  ArrowColor #666666
  BorderColor #444444
}

entity "users" as users {
  * id : int <<PK>>
  --
  email : varchar(255) <<UQ>>
  name : varchar(255)
  phone : varchar(50)
  ktp : varchar(32)
  password : varchar(255)
  profile_image : longtext
  role : enum('patient','nurse')
  created_at : timestamp
  updated_at : timestamp
}

entity "activities" as activities {
  * id : int <<PK>>
  --
  email : varchar(255) <<FK,UQ>>
  consultation_count : int
  last_updated : timestamp
}

entity "active_days" as active_days {
  * id : int <<PK>>
  --
  email : varchar(255) <<FK>>
  active_date : date
}

entity "articles_read" as articles_read {
  * id : int <<PK>>
  --
  email : varchar(255) <<FK>>
  article_id : varchar(255)
  read_at : timestamp
}

entity "chat_history" as chat_history {
  * id : int <<PK>>
  --
  email : varchar(255)
  role : enum('user','assistant')
  content : text
  mode : enum('public','consultation')
  created_at : timestamp
}

entity "announcements" as announcements {
  * id : int <<PK>>
  --
  title : varchar(255)
  content : text
  type : enum('info','warning','success','urgent')
  active : tinyint(1)
  priority : int
  created_by : varchar(255)
  created_at : datetime
  expires_at : datetime
}

entity "broadcast_logs" as broadcast_logs {
  * id : int <<PK>>
  --
  admin_email : varchar(255)
  message : text
  recipients : text
  recipient_count : int
  success_count : int
  fail_count : int
  fonnte_response : text
  status : enum('sent','failed','partial')
  created_at : timestamp
}

entity "rag_documents" as rag_documents {
  * id : int <<PK>>
  --
  filename : varchar(255)
  original_name : varchar(255)
  file_type : varchar(50)
  file_size : int
  chunk_count : int
  status : enum('pending','indexed','failed')
  error_message : text
  uploaded_by : varchar(255)
  created_at : timestamp
  updated_at : timestamp
}

entity "rag_chunks" as rag_chunks {
  * id : int <<PK>>
  --
  document_id : int <<FK>>
  chunk_index : int
  content : text
  char_count : int
  created_at : timestamp
}

entity "schema_migrations" as schema_migrations {
  * id : int <<PK>>
  --
  filename : varchar(255) <<UQ>>
  checksum : char(64)
  executed_at : timestamp
}

' FK relationships from INFORMATION_SCHEMA
activities }o--|| users : email -> email
active_days }o--|| users : email -> email
articles_read }o--|| users : email -> email
rag_chunks }o--|| rag_documents : document_id -> id

' Logical (application-level) relationships, no DB FK constraint
chat_history }o..|| users : email (logical)
announcements }o..|| users : created_by (logical)
broadcast_logs }o..|| users : admin_email (logical)
rag_documents }o..|| users : uploaded_by (logical)

' Hidden links to keep layout compact (less horizontal spread)
users -[hidden]down- activities
activities -[hidden]down- active_days
active_days -[hidden]down- articles_read
articles_read -[hidden]down- chat_history

users -[hidden]down- announcements
announcements -[hidden]down- broadcast_logs

users -[hidden]down- rag_documents
rag_documents -[hidden]down- rag_chunks

broadcast_logs -[hidden]down- schema_migrations

@enduml
